correctifs sur la page about et les collapses

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,7 +19,7 @@ header {
                 width: 145px;
             }
         }
-        &__liste{
+        &__link{
             display: flex;
             flex-direction: row; 
             justify-content: center;
